--- a/Sembrar/Orientador/PrincipalOrientador.Master
+++ b/Sembrar/Orientador/PrincipalOrientador.Master
@@ -85,6 +85,7 @@
                         <ul>
                             <li><a href="../Orientador/frmResponderCuestionario.aspx"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Responder</a></li>
                             <li><a href="../Orientador/frmModificarCuestionario.aspx"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Modificar/Eliminar</a></li>
+                            <li><a href="../Orientador/frmVerCuestionario.aspx"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Ver</a></li>
                         </ul>
                     </li>
                     <li><a>Reportes<i class="fa fa-angle-down" aria-hidden="true"></i></a>
