--- a/Sembrar/Estilos/estilosMaster.css
+++ b/Sembrar/Estilos/estilosMaster.css
@@ -1,7 +1,9 @@
 ﻿* {
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
 }
 
 body {
