--- a/Sembrar/Coordinador/PrincipalCoordiandor.Master
+++ b/Sembrar/Coordinador/PrincipalCoordiandor.Master
@@ -24,18 +24,21 @@
                         <img src="../Imagenes/logo_home.jpg" alt="" /></a>
                 </div>
                 <ul>
-                    <li><a href="../Coordinador/Inicio.aspx"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a></li>                   
+                    <li><a href="../Coordinador/Inicio.aspx"><i class="fa fa-home" aria-hidden="true"></i>Inicio</a></li>                 
+                    <li><a>Personas<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                        <ul>                    
+                            <li><a href="../Coordinador/frmVerPersonas.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Ver Personas</a></li>  
+                        </ul>               
                     <li><a>Reportes<i class="fa fa-angle-down" aria-hidden="true"></i></a>
                          <ul>
-                            <li><a href="../Coordinador/frmVerPersonas.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Ver Personas</a></li>
-                            <li><a href="../Coordinador/frmReporteGenericoTodos.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Respuestas Cuestionarios</a></li>
-                            <li><a href="../Coordinador/frmReportePreguntasCerradas.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Reporte Preguntas Cerradas</a></li>
-                            <li><a href="../Coordinador/frmReporteAsistenciaAnual.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Reporte Asistencia Anual</a></li>
-                            <li><a href="../Coordinador/frmReporteAsistenciaAnualReuniones.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Reporte Asistencia Anual Reuniones</a></li>                            
+                            <li><a href="../Coordinador/frmReporteGenericoTodos.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Parametrizable Cuestionarios</a></li>
+                            <li><a href="../Coordinador/frmReportePreguntasCerradas.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Preguntas Cerradas</a></li> 
+                            <li><a href="../Coordinador/frmReporteAsistenciaRango.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Por Rango</a></li>                          
+                            <li><a href="../Coordinador/frmReporteAsistenciaDiaria.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Diaria</a></li>                      
                             <li><a href="../Coordinador/frmReporteAsistenciaMensual.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Mensual</a></li>
-                            <li><a href="../Coordinador/frmReporteAsistenciaRango.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Por Rango</a></li>
-                            <li><a href="../Coordinador/frmReporteAsistenciaPorPersona.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Reporte Asistencia Mensual</a></li>                            
-                            <li><a href="../Coordinador/frmReporteAsistenciaDiaria.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Diaria</a></li>
+                            <li><a href="../Coordinador/frmReporteAsistenciaAnual.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Anual</a></li>     
+                            <li><a href="../Coordinador/frmReporteAsistenciaPorPersona.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Mensual por Persona Reuniones</a></li>  
+                            <li><a href="../Coordinador/frmReporteAsistenciaAnualReuniones.aspx"><i class="fa fa-list-ul" aria-hidden="true"></i>Asistencia Anual Reuniones</a></li>
                         </ul>
                     </li>
                 </ul>
